Making Robo4J compile and run under JDK 11